# Tubing-Master

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-build.txt  requirements-damask.txt  requirements.txt
Projects/: Tubing_Master_2026-05-11_316L_stainless_steel_Sink_drawing_(rodless_drawing)_From_12.000x_9.900_To_9.500x_9.300.json  project_history.json
docs/: PACKAGING.md  USER_GUIDE.md
packaging/: build.bat  build.sh  create_mac_installer.sh  create_windows_installer.ps1  generate_icons.py  tubing_master.iss  tubing_master.spec
suggested_projects/: judgment_closest_01_316L_stainless_steel_12.000_10.000_→_10.500_8.800_b20e3361.json  judgment_closest_01_316L_stainless_steel_12.000_10.000_→_5.500_4.800_921a477c.json  judgment_closest_02_316L_stainless_steel_12.000_10.000_→_10.500_8.800_099a0f26.json  judgment_closest_02_316L_stainless_steel_12.000_10.000_→_6.500_5.800_2f25b25e.json  judgment_closest_03_316L_stainless_steel_12.000_10.000_→_10.500_8.800_8a633a00.json  judgment_closest_03_316L_stainless_steel_12.000_10.000_→_2.500_1.800_3a12a918.json
tests/: test_app_paths.py  test_damask_support.py  test_engine_safety_factor.py  test_fea_hybrid.py  test_fea_pass_schematic.py  test_fea_tube_die.py  test_material_properties.py  test_nitinol_model.py  test_tensile_import.py
tubing_master/: __init__.py  app_paths.py  bom_detail.py  damask_support.py  die_inventory.py  die_schematic.py  dolfinx_sim.py  engine.py  excel_export.py  fea_hybrid.py  fea_optimize.py  fea_pass_schematic.py  fea_tube_die.py  geometry.py  grain_evolution.py  materials.py  (+6 more)
(+20 files in other folders)
