[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tubing-master"
version = "0.1.1"
description = "Tubing Master — tube drawing pass schedule, optimization, and process BOM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "PySide6>=6.5",
    "optuna>=3.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
damask = ["h5py>=3.8"]
build = ["pyinstaller>=6.0"]

[project.scripts]
tubing-master = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tubing_master*"]

[tool.setuptools.package-data]
tubing_master = ["damask_templates/*", "assets/*"]
