[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "tubing-master"
version = "1.0.1"
description = "Tubing Master — tube drawing pass schedule, optimization, and process BOM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4.0",
    "PySide6>=6.11.0",
    "optuna>=4.9.0",
    "openpyxl>=3.1.5",
    "pypdf>=6.13.0",
    "Pillow>=12.2.0",
]

[project.optional-dependencies]
damask = ["h5py>=3.16.0"]
build = ["pyinstaller>=6.21.0"]
dev = ["pytest>=9.0"]

[project.scripts]
tubing-master = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tubing_master*"]

[tool.setuptools.package-data]
tubing_master = ["damask_templates/*", "assets/*"]
